Fixed head texture not added in database if head already placed, fixed migration script, added database update on debug texture command